# yocto_hello_world

./: CMakeLists.txt  main.c  main.cpp
